kubernetes/laravel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
spec:
  rules:
    - http:
        paths:

          - pathType: Prefix
            path: /
            backend:
              service:
                name: laravel-service
                port:
                  number: 8000
